--- a/application/index/view/template/query.html
+++ b/application/index/view/template/query.html
@@ -41,8 +41,8 @@
                             <input type="text" class="form-control required" id="queryData" name="queryData" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <input type="text" style="height: 40px;font-size: 18px;" class="btn btn-info center-block" id="submitOpt" value="查询" />
+                    <div class="form-group ">
+                        <input type="text" style="height: 40px;font-size: 18px;max-width: 60%;" class="btn btn-info center-block" id="submitOpt" value="查询" />
                     </div>
 
                     <input type="hidden" name="tid" value="{$template.tid}" />
