--- a/application/index/view/template/query.html
+++ b/application/index/view/template/query.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button style="height: 40px;font-size: 18px;min-width: 40%; max-width: 60%;" class="btn btn-info center-block" id="submitOpt">查询</button>
+                        <button type="button" style="height: 40px;font-size: 18px;min-width: 40%; max-width: 60%;" class="btn btn-info center-block" id="submitOpt">查询</button>
                     </div>
 
                     <input type="hidden" name="tid" value="{$template.tid}" />
@@ -130,6 +130,7 @@
     <script src="__JS__/index.js"></script>
     <script type="text/javascript">
         $("#submitOpt").click(function() {
+            console.log("sss")
             $("#subForm").submit();
         });
 
@@ -145,6 +146,7 @@
 
         $("#subForm").validate({
             submitHandler: function(form) {
+                console.log("s")
                 $.ajax({
                     url: "{:url('index/Template/dataQuery')}",
                     type: "post",
