--- a/application/index/view/template/query.html
+++ b/application/index/view/template/query.html
@@ -41,12 +41,13 @@
                             <input type="text" class="form-control required" id="queryData" name="queryData" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <button type="button" style="height: 40px;font-size: 18px;min-width: 40%; max-width: 60%;" class="btn btn-info center-block" id="submitOpt">查询</button>
-                    </div>
 
+                    <input type="text" style="display:none;">
                     <input type="hidden" name="tid" value="{$template.tid}" />
                     <input type="hidden" name="queryField" value=" {$template.primaryKey.field}" />
+                    <div class="form-group">
+                        <button type="button" style="height: 40px;font-size: 18px;min-width: 40%; max-width: 60%;" onkeydown="off" class="btn btn-info center-block" id="submitOpt">查询</button>
+                    </div>
 
                     <div class="col-lg-8 col-lg-push-2" id="queryRes" hidden>
                         {volist name="optionList" id="vo" key="k"}
@@ -97,25 +98,6 @@
             border-top: 1px solid rgba(0, 0, 0, 0.1);
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
         }
-        /*透明渐变水平线*/
-        
-        hr.style-two {
-            width: 80%;
-            margin: 0 auto;
-            border: 0;
-            height: 1px;
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-        }
-        /*渐变*/
-        
-        hr.style-three {
-            width: 80%;
-            margin: 0 auto;
-            border: 0;
-            height: 1px;
-            background: #333;
-            background-image: linear-gradient(to right, #ccc, #333, #ccc);
-        }
     </style>
     <div class="footer">
 
@@ -129,8 +111,26 @@
     <script src="__JS__/messages_zh.min.js"></script>
     <script src="__JS__/index.js"></script>
     <script type="text/javascript">
+        var wait = 60;
+        var btn = document.getElementById("submitOpt")
+
+        function staytime(btn) {      
+            if (wait == 0) {        
+                btn.removeAttribute("disabled");        
+                btn.value = "查询";        
+                wait = 60;      
+            } else {        
+                btn.setAttribute("disabled", true);
+                btn.innerHTML = wait + "秒后重新查询";        
+                wait--;        
+                setTimeout(function() {          
+                    staytime(btn);        
+                },         1000)      
+            }    
+        }
+
+
         $("#submitOpt").click(function() {
-            console.log("sss")
             $("#subForm").submit();
         });
 
@@ -146,7 +146,7 @@
 
         $("#subForm").validate({
             submitHandler: function(form) {
-                console.log("s")
+                $("#queryRes").hide()
                 $.ajax({
                     url: "{:url('index/Template/dataQuery')}",
                     type: "post",
@@ -158,8 +158,12 @@
                                 $("#" + i).text(item)
                             })
                             $("#queryRes").show()
+
+                            staytime(btn)
                         } else {
                             showErrorMsg("未查到记录");
+                            wait = 0
+                            staytime(btn)
                         }
                     },
                 });
