--- a/application/index/view/template/query.html
+++ b/application/index/view/template/query.html
@@ -62,6 +62,10 @@
                             <hr class="style-one">
                         </div>
                         {/volist}
+                        <div>
+                            <span> 有问题？去</span>
+                            <a href="/f/{$template.tid}">更新</a>
+                        </div>
                     </div>
                 </form>
             </div>
